update certificates page

--- a/certificates.html
+++ b/certificates.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dinh Tran | Achievements</title>
+    <title>Dinh Tran | Certificates</title>
     <link rel="shortcut icon" href="images/icon-2.PNG">
     <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Krona+One&family=Press+Start+2P&family=Rowdies:wght@700&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -11,7 +11,7 @@
 </head>
 <body>
     <main>
-        <h1 data-aos="zoom-in">MY ACHIEVEMENTS</h1>
+        <h1 data-aos="zoom-in">MY CERTIFICATES</h1>
         <div class="container">
             <img src="images/CodeLearn_certification.png" alt="CodeLearn_certification" data-aos="zoom-in-up">
             <img src="images/CodeLearn_certification-1.png" alt="CodeLearn_certification" data-aos="zoom-in-up">
