--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
                         <img src="images/certificate.png" alt="About me">
                     </div>
                     <div class="contentBx">
-                        <h2>achievements</h2>
-                        <p>Click to see my achievements!</p>
+                        <h2>certificates</h2>
+                        <p>Click to see my certificates!</p>
                         <a href="certificates.html">See more</a>
                     </div>
                 </div>
