Updated Meme Generator App

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 </div>
 
                 <div class="card-area">
-                    <h1 data-aos="fade-right">SIMPLE PROJECTS</h1>
+                    <h1 data-aos="fade-right">SIMPLE WEBAPPS</h1>
                     <div class="project-card" id="calculator-card" data-aos="zoom-in-down">
                         <div class="imgBx">
                             <img src="images/calculator-icon-2.png" alt="Calculator">
@@ -196,13 +196,13 @@
                             <a class="play" href="CALCULATOR APP/index.html" target="blanc">Try!</a>
                         </div>
                     </div>
-                    <div class="project-card" id="snake-card" data-aos="zoom-in-down">
+                    <div class="project-card" id="memeGen-card" data-aos="zoom-in-down">
                         <div class="imgBx">
-                            <img src="images/snake-icon-2.png" alt="Snake project">
+                            <img src="images/trollFace.png" alt="Meme Generator">
                         </div>
                         <div class="contentBx">
-                            <h3>SNAKE THE GAME</h3>
-                            <a class="play" href="https://www.youtube.com/watch?v=OfrRXK3a6pw&t=9s" target="blanc">Watch now!</a>
+                            <h3>Meme Generator</h3>
+                            <a class="play" href="https://tranphuongdinh.github.io/MemeGeneratorAppDemo/" target="blanc">Try!</a>
                         </div>
                     </div>
                 </div>
