--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         <p>
                             <span class="fa fa-address-card-o"></span> <span>Full name:</span> Tran Phuong Dinh<br>
                             <span class="fa fa-address-card-o"></span> <span>Age:</span> 19<br>
-                            <span class="fa fa-graduation-cap"></span> VNU - University Of Science<br>
+                            <span class="fa fa-graduation-cap"></span> VNUHCM - University Of Science<br>
                             <span class="fa fa-home"></span> Long An, Vietnam<br>
                         </p>
                     </div>
