--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         </section>
         <section id="experience">
             <h1 class="section-title" data-aos="fade-down-right">EXPERIENCE</h1>
-            <p class="p-subtitle" data-aos="fade-right">I have 3 months experience of developing Front-end website</p>
+            <p class="p-subtitle" data-aos="fade-right">Current: Study React, React Native and NodeJS</p>
             <div class="ctn">
                 <div class="skill-container">
                     <div class="skills" data-aos="zoom-in-up">
