--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <a href="#about-me" class="nav-link" title="About me">About me</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#experience" class="nav-link" title="Experience">Experience</a>
+                        <a href="#experience" class="nav-link" title="Experience">Skills</a>
                     </li>
                     <li class="nav-item">
                         <a href="#projects" class="nav-link" title="Projects">Projects</a>
@@ -124,7 +124,7 @@
             </div>
         </section>
         <section id="experience">
-            <h1 class="section-title" data-aos="fade-down-right">EXPERIENCE</h1>
+            <h1 class="section-title" data-aos="fade-down-right">SKILLS</h1>
             <p class="p-subtitle" data-aos="fade-right">Current: Study React, React Native and NodeJS</p>
             <div class="ctn">
                 <div class="skill-container">
