--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
               content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Dinh Tran</title>
-        <link rel="shortcut icon" href="images/icon-2.PNG">
+        <link rel="shortcut icon" href="images/logo.PNG">
         <!--Ion Icons-->
         <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
         <!--Google Fonts-->
@@ -45,7 +45,7 @@
                         <a href="#home" class="nav-link current" title="Home">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#about-me" class="nav-link" title="About me">About me</a>
+                        <a href="#about-me" class="nav-link" title="About me">About</a>
                     </li>
                     <li class="nav-item">
                         <a href="#experience" class="nav-link" title="Experience">Skills</a>
@@ -86,6 +86,7 @@
         </section>
         <section id="about-me">
             <h1 data-aos="fade-down-right" class="section-title">ABOUT ME</h1>
+            <p class="p-subtitle">"There's no fate but what we make for ourselves." - Sarah Connor</p>
             <div class="ctn">
                 <div class="card" data-aos="fade-up">
                     <div class="imgBx">
