--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         <link rel="stylesheet" href="styles.css">
     </head>
 <body>
+    <div id="loading">
+        <img id="loading-image" src="https://steamuserimages-a.akamaihd.net/ugc/785232317734044116/7B04BA5F49BDB1D05843083868D351F299749F9B/" alt="Loading..." />
+      </div>
     <div id="progressbar"></div>
     <div id="scrollPath"></div>
     <header>
@@ -86,7 +89,7 @@
         </section>
         <section id="about-me">
             <h1 data-aos="fade-down-right" class="section-title">ABOUT ME</h1>
-            <p class="p-subtitle">"There's no fate but what we make for ourselves." - Sarah Connor</p>
+            <p class="p-subtitle" data-aos="fade-right">"There's no fate but what we make for ourselves." - Sarah Connor</p>
             <div class="ctn">
                 <div class="card" data-aos="fade-up">
                     <div class="imgBx">
