--- a/PROJECTS/TRON-LIKE TUNNELS/index.html
+++ b/PROJECTS/TRON-LIKE TUNNELS/index.html
@@ -7,6 +7,11 @@
       body {
         margin: 0;
       }
+      ::-webkit-scrollbar
+      {
+          width: 0;
+          height: 0;
+      }
     </style>
   </head>
   <body>
