--- a/certificates.html
+++ b/certificates.html
@@ -6,7 +6,7 @@
               content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Dinh Tran</title>
-        <link rel="shortcut icon" href="images/logo.png">
+        <link rel="shortcut icon" href="./images/white-logo.png">
         <!--Ion Icons-->
         <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
         <!--Google Fonts-->
