update certificate UI

--- a/certificates.html
+++ b/certificates.html
@@ -18,6 +18,7 @@
         <!--Stylesheets-->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
         <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
         <link rel="stylesheet" href="css/styles.css">
         <link rel="stylesheet" href="css/fontawesome-all.css">
         <link rel="stylesheet" href="css/certificates-style.css">
@@ -33,8 +34,8 @@
             <span class="img-full-screen__close-btn fas fa-close"></span>
             <a class="img-full-screen__link" href="" target="blanc"><img id="img-full-screen__img" src="" alt="certificate-full-screen"></a>
         </div>
-        <h1>Certificates</h1>
-        <section id="certificates">
+        <h1 data-aos="zoom-in">Certificates</h1>
+        <section id="certificates" data-aos="zoom-in-up">
             <img class="certificates__img" src="images/CodeLearn_certification.png" data-link="https://codelearn.io/certification/odbkndqw" alt="CodeLearn_certification">
             <img class="certificates__img" src="images/CodeLearn_certification-1.png" data-link="https://codelearn.io/certification/zwi1mgy2" alt="CodeLearn_certification">
             <img class="certificates__img" src="images/CodeLearn_certification-2.png" data-link="https://codelearn.io/certification/zddjotrk" alt="CodeLearn_certification">
@@ -82,6 +83,7 @@
     </footer>
     <a id="back-to-top-btn"><img src="images/up-icon.png" alt="Back to top"></a>
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/certificateScript.js"></script>
 </body>
 </html>
