--- a/index.html
+++ b/index.html
@@ -334,6 +334,15 @@
         <div class="contact-items">
             <ul>
                 <li>
+                    <a href="https://drive.google.com/file/d/187rPb16J6-0cHs8xMa0K1lNittqpRcNi/view?usp=sharing" target="blanc">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </a>
+                </li>
+                <li>
                     <a href="https://www.facebook.com/Dinh.Ramos.SR4.CR7.NTH/" target="blanc">
                         <span></span>
                         <span></span>
