--- a/PROJECTS/ROOM - HOMEPAGE/index.html
+++ b/PROJECTS/ROOM - HOMEPAGE/index.html
@@ -2,58 +2,61 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
   <title>Frontend Mentor | Room homepage</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  Home
-  Shop
-  About
-  Contact
+  <div class="container">
+    <div class="container__top">
+      <div class="container__top__first">
+        <nav>
+          <div class="container__top__first__nav-brand">room</div>
+          <ul>
+            <li><a href="#">home</a></li>
+            <li><a href="#">shop</a></li>
+            <li><a href="#">about</a></li>
+            <li><a href="#">contact</a></li>
+          </ul>
+        </nav>
+      </div>
 
-  Discover innovative ways to decorate
+      <div class="container__top__second">
+        <div class="container__top__second__content">
+          <h1>Discover innovative ways to decorate</h1>
+          <p>
+            We provide unmatched quality, comfort, and style for property owners across the country. 
+            Our experts combine form andnfunction in bringing your vision to life. Create a room in your 
+            own style with our collection and make your property a reflection of you and what you love.          
+          </p>
+          <a href="#">shop now</a>
+        </div>
 
-  We provide unmatched quality, comfort, and style for property owners across the country. 
-  Our experts combine form andnfunction in bringing your vision to life. Create a room in your 
-  own style with our collection and make your property a reflection of you and what you love.
+        <div class="container__top__second_buttons">
+          <button></button>
+          <button></button>
+        </div>
+      </div>
+    </div>
 
-  Shop now
+    <div class="container__bottom">
+      <div class="container__bottom__first"></div>
 
-  We are available all across the globe
-
-  With stores all over the world, it's easy for you to find furniture for your home or place of business. 
-  Locally, we’re in most major cities throughout the country. Find the branch nearest you using our 
-  store locator. Any questions? Don't hesitate to contact us today.
-
-  Shop now
-
-  Manufactured with the best materials
-
-  Our modern furniture store provide a high level of quality. Our company has invested in advanced technology 
-  to ensure that every product is made as perfect and as consistent as possible. With three decades of 
-  experience in this industry, we understand what customers want for their home and office.
-
-  Shop now
-
-  About our furniture
-
-  Our multifunctional collection blends design and function to suit your individual taste.
-  Make each room unique, or pick a cohesive theme that best express your interests and what
-  inspires you. Find the furniture pieces you need, from traditional to contemporary styles
-  or anything in between. Product specialists are available to help you create your dream space.
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+      <div class="container__bottom__second">
+        <h4>About our furniture</h4>
+        <p>  
+          Our multifunctional collection blends design and function to suit your individual taste.
+          Make each room unique, or pick a cohesive theme that best express your interests and what
+          inspires you. Find the furniture pieces you need, from traditional to contemporary styles
+          or anything in between. Product specialists are available to help you create your dream space.
+        </p>
+      </div>
+      
+      <div class="container__bottom__third"></div>
+    </div>
   </div>
+
+  <script src="js/script.js"></script>
 </body>
 </html>
