--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                         </div>
                         <div class="contentBx">
                             <h3>Paint</h3>
-                            <a class="play" href="PROJECTS/SIMPLE PAINT/index.html" target="blanc">Try!</a>
+                            <a class="play" href="https://tranphuongdinh.github.io/SIMPLE-PAINT/" target="blanc">Try!</a>
                         </div>
                     </div>
 
