fixed some contents

--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
                     <div class="contentBx">
                         <h2>introduction</h2>
                         <p>
-                            Hi! my name is Dinh. I am 19 years old, and a student of VNU - University Of Science. 
+                            Hi! My name is Dinh. I am 19 years old and I am a student of VNU - University Of Science. 
                             Web development is my passion. 
                             I have learnt Front-end development for six months and I got some certificates of HTML-CSS-JS and Front-end frameworks. 
-                            My favorite quote is by Mark Twain: “It ain't what you don't know that gets you into trouble. It's what you know for sure that just ain't so.”.
+                            My favorite quote is from Mark Twain: “It ain't what you don't know that gets you into trouble. It's what you know for sure that just ain't so.”.
                         </p>
                     </div>
                 </div>
