--- a/PROJECTS/ROOM - HOMEPAGE/index.html
+++ b/PROJECTS/ROOM - HOMEPAGE/index.html
@@ -5,15 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Frontend Mentor | Room homepage</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="dist/styles.css">
 </head>
 <body>
   <div class="container">
     <div class="container__top">
       <div class="container__top__first">
         <nav>
-          <div class="container__top__first__nav-brand">room</div>
-          <ul>
+          <div class="menu-icon"><img class="menu-icon-img" src="./images/icon-hamburger.svg" alt=""></div>
+          <div class="container__top__first__nav-brand"><a href="./index.html">room</a></div>
+          <ul class="nav-list">
             <li><a href="#">home</a></li>
             <li><a href="#">shop</a></li>
             <li><a href="#">about</a></li>
@@ -24,18 +25,18 @@
 
       <div class="container__top__second">
         <div class="container__top__second__content">
-          <h1>Discover innovative ways to decorate</h1>
-          <p>
+          <h1 class="container__top__second__content--header">Discover innovative ways to decorate</h1>
+          <p class="container__top__second__content--paragraph">
             We provide unmatched quality, comfort, and style for property owners across the country. 
             Our experts combine form andnfunction in bringing your vision to life. Create a room in your 
             own style with our collection and make your property a reflection of you and what you love.          
           </p>
-          <a href="#">shop now</a>
+          <a href="#">shop now <img src="./images/icon-arrow.svg" alt=""></a>
         </div>
 
         <div class="container__top__second_buttons">
-          <button></button>
-          <button></button>
+          <div class="container__top__second_buttons--left"><img src="./images/icon-angle-left.svg" alt="Left-Arrow"></div>
+          <div class="container__top__second_buttons--right"><img src="./images/icon-angle-right.svg" alt="Right-Arrow"></div>
         </div>
       </div>
     </div>
@@ -44,19 +45,22 @@
       <div class="container__bottom__first"></div>
 
       <div class="container__bottom__second">
-        <h4>About our furniture</h4>
-        <p>  
-          Our multifunctional collection blends design and function to suit your individual taste.
-          Make each room unique, or pick a cohesive theme that best express your interests and what
-          inspires you. Find the furniture pieces you need, from traditional to contemporary styles
-          or anything in between. Product specialists are available to help you create your dream space.
-        </p>
+        <div class="container__bottom__second__content">
+          <h3>About our furniture</h3>
+          <p>  
+            Our multifunctional collection blends design and function to suit your individual taste.
+            Make each room unique, or pick a cohesive theme that best express your interests and what
+            inspires you. Find the furniture pieces you need, from traditional to contemporary styles
+            or anything in between. Product specialists are available to help you create your dream space.
+          </p>
+        </div>
       </div>
       
       <div class="container__bottom__third"></div>
     </div>
   </div>
 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="js/script.js"></script>
 </body>
 </html>
