finished room-homepage

--- a/index.html
+++ b/index.html
@@ -193,6 +193,16 @@
                     <li class="list" data-filter="others">Others</li>
                 </ul>
                 <div class="product">
+                    <div class="project-card others" id="room-homepage-card">
+                        <div class="imgBx">
+                            <img src="./images/room-icon.png" alt="Room Homepage">
+                        </div>
+                        <div class="contentBx">
+                            <h3>Room Homepage</h3>
+                            <a class="play" href="PROJECTS/ROOM - HOMEPAGE/" target="blanc">Visit it!</a>
+                        </div>
+                    </div>
+
                     <div class="project-card miniGames" id="flappy-bird-card">
                         <div class="imgBx">
                             <img src="./images/flappy-bird-icon-2.png" alt="Flappy Bird">
