--- a/PROJECTS/ROOM - HOMEPAGE/index.html
+++ b/PROJECTS/ROOM - HOMEPAGE/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <title>Frontend Mentor | Room homepage</title>
+  <title>Room homepage</title>
   <link rel="stylesheet" href="dist/styles.css">
 </head>
 <body>
@@ -21,16 +21,42 @@
             <li><a href="#">contact</a></li>
           </ul>
         </nav>
+        <div class="container__top__first__sliders">
+          <img class="container__top__first__sliders__img" src="./images/desktop-image-hero-1.jpg" alt="background-image">
+          <img class="container__top__first__sliders__img" src="./images/desktop-image-hero-2.jpg" alt="background-image">
+          <img class="container__top__first__sliders__img" src="./images/desktop-image-hero-3.jpg" alt="background-image">
+        </div>
+        <div class="container__top__first__labels">
+          <button class="container__top__first__label active"></button>
+          <button class="container__top__first__label"></button>
+          <button class="container__top__first__label"></button>
+        </div>
       </div>
 
       <div class="container__top__second">
         <div class="container__top__second__content">
-          <h1 class="container__top__second__content--header">Discover innovative ways to decorate</h1>
-          <p class="container__top__second__content--paragraph">
-            We provide unmatched quality, comfort, and style for property owners across the country. 
-            Our experts combine form andnfunction in bringing your vision to life. Create a room in your 
-            own style with our collection and make your property a reflection of you and what you love.          
-          </p>
+          <div class="container__top__second__content__sliders">
+            <div class="container__top__second__content__slider">
+              <h1 class="container__top__second__content--header">Discover innovative ways to decorate</h1>
+              <p class="container__top__second__content--paragraph">
+                We provide unmatched quality, comfort, and style for property owners across the country. 
+                Our experts combine form andnfunction in bringing your vision to life. Create a room in your 
+                own style with our collection and make your property a reflection of you and what you love.          
+              </p>
+            </div>
+            <div class="container__top__second__content__slider">
+              <h1 class="container__top__second__content--header">We are available all across the globe</h1>
+              <p class="container__top__second__content--paragraph">
+                With stores all over the world, it's easy for you to find furniture for your home or place of business. Locally, we’re in most major cities throughout the country. Find the branch nearest you using our store locator. Any questions? Don't hesitate to contact us today.         
+              </p>
+            </div>
+            <div class="container__top__second__content__slider">
+              <h1 class="container__top__second__content--header">Manufactured with the best materials</h1>
+              <p class="container__top__second__content--paragraph">
+                Our modern furniture store provide a high level of quality. Our company has invested in advanced technology to ensure that every product is made as perfect and as consistent as possible. With three decades of experience in this industry, we understand what customers want for their home and office.          
+              </p>
+            </div>
+          </div>
           <a href="#">shop now <img src="./images/icon-arrow.svg" alt=""></a>
         </div>
 
