--- a/index.html
+++ b/index.html
@@ -309,19 +309,20 @@
         <section id="contact">
             <h1 class="section-title" data-aos="zoom-in-up">CONTACT</h1>
             <div class="ctn">
-                <div class="formBx" data-aos="fade-up">
+                <!-- <div class="formBx" data-aos="fade-up">
                     <script type="text/javascript" src="https://form.jotform.com/jsform/202814080705044"></script>
-                </div>
+                </div> -->
 
-                <!-- <div class="formBx">
-                    <form>
+                <div class="formBx" data-aos="fade-up">
+                    <form onsubmit="submitForm()">
                         <h3>Message Me</h3>
                         <input type="text" name="" placeholder="Full Name">
                         <input type="text" name="" placeholder="Email">
                         <textarea placeholder="Your Message"></textarea>
                         <input type="submit" value="Send">
                     </form>
-                </div> -->
+                </div>
+
                 <div class="contact-info" data-aos="fade-up">
                     <div class="contact-info__item">
                         <span class="contact-info__item-icon fas fa-map-marker-alt"></span>
@@ -353,6 +354,15 @@
                     </a>
                 </li>
                 <li>
+                    <a href="https://github.com/TranPhuongDinh/dinhtran/tree/master/PROJECTS" target="blanc">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span class="fab fa-github-square" aria-hidden="true"></span>
+                    </a>
+                </li>
+                <li>
                     <a href="https://www.facebook.com/Dinh.Ramos.SR4.CR7.NTH/" target="blanc">
                         <span></span>
                         <span></span>
@@ -377,15 +387,6 @@
                         <span></span>
                         <span></span>
                         <span class="fab fa-youtube-square" aria-hidden="true"></span>
-                    </a>
-                </li>
-                <li>
-                    <a href="tel:0949996310">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span class="fas fa-phone-square" aria-hidden="true"></span>
                     </a>
                 </li>
             </ul>
