--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </head>
 <body>
     <div id="loading">
-        <img id="loading-image" src="https://steamuserimages-a.akamaihd.net/ugc/785232317734044116/7B04BA5F49BDB1D05843083868D351F299749F9B/" alt="Loading..." />
+        <img id="loading-image" src="https://cdn.dribbble.com/users/1141571/screenshots/3978167/dribbble_3.gif" alt="Loading..." />
       </div>
       <div id="progressbar"></div>
       <div id="scrollPath"></div>
@@ -360,15 +360,6 @@
                         <span></span>
                         <span></span>
                         <span class="fab fa-github-square" aria-hidden="true"></span>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.facebook.com/Dinh.Ramos.SR4.CR7.NTH/" target="blanc">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span class="fab fa-facebook-square" aria-hidden="true"></span>
                     </a>
                 </li>
                 <li>
