--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         <li>T</li>
                     </ul>
                 </a>
-                <h2 id="home-subtitle" data-aos="zoom-in">WELCOME TO MY SITE</h2>
+                <h2 id="home-subtitle" data-aos="zoom-in">WELCOME TO MY SITES</h2>
             </div>
         </section>
         <section id="about-me">
