--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                         </div>
                         <div class="contentBx">
                             <h3>PIANO COVER</h3>
-                            <a class="play" href="https://www.youtube.com/watch?v=FWbPnQYPPEM" target="blanc">Watch now!</a>
+                            <a class="play" href="https://youtu.be/AR6zpfzaENs" target="blanc">Watch now!</a>
                         </div>
                     </div>
     
