--- a/index.html
+++ b/index.html
@@ -313,13 +313,16 @@
                 </div> -->
 
                 <div class="formBx" data-aos="fade-up">
-                    <form onsubmit="submitForm()">
+                    <h1 class="formBx__title">Message me!</h1>
+                    <iframe class="fs_embed" src="https://formsmarts.com/form/25d3?mode=h5embed&lay=1" allow="camera; fullscreen; geolocation" allowfullscreen="true"><a href="https://formsmarts.com/form/25d3">Can&#39;t see the form? Click here</a>.</iframe>
+                    <!-- Do not change or remove this notice. See https://formsmarts.com/warn -->
+                    <!-- <form onsubmit="submitForm()">
                         <h3>Message Me</h3>
                         <input type="text" name="" placeholder="Full Name">
                         <input type="text" name="" placeholder="Email">
                         <textarea placeholder="Your Message"></textarea>
                         <input type="submit" value="Send">
-                    </form>
+                    </form> -->
                 </div>
 
                 <div class="contact-info" data-aos="fade-up">
