fix contact UI bugs

--- a/index.html
+++ b/index.html
@@ -334,9 +334,9 @@
         </section>
 
         <section id="contact">
-            <h3>Contact me</h3>
-            <h2>Get in Touch</h2>
-            <div class="ctn">
+            <h3 data-aos="fade-down">Contact me</h3>
+            <h2 data-aos="fade-down">Get in Touch</h2>
+            <div data-aos="fade-up" class="ctn">
                 <!-- <div class="formBx" data-aos="fade-up">
                     <script type="text/javascript" src="https://form.jotform.com/jsform/202814080705044"></script>
                 </div> -->
