--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
         </section>
         <section id="about-me">
             <div class="ctn">
-                <div data-aos="fade-right" class="about-me__ctn__full-image">
+                <div data-aos="fade-up" class="about-me__ctn__full-image">
                     <img src="./images/avatar-about-me.jpg" alt="">
                 </div>
-                <div data-aos="fade-left" class="about-me__ctn__content">
+                <div data-aos="fade-down" class="about-me__ctn__content">
                     <div class="about-me__ctn__intro">
                         <h3>My Intro</h3>
                         <h2>About Me</h2>
